--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
         "daisyui": "^1.16.5",
+        "firebase": "^9.6.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.1.1",
